# pyferox

./: .coverage  .gitignore  LICENSE  Phase2.md  README.md  coverage.xml  main.py  phase1_audit.md  phase2_audit.md  phase3.md  phase3_audit.md  phase4_audit.md  phase4_benchmark_baseline.md  pyproject.toml
benchmarks/: README.md  phase4_baseline.py
docs/: README.md  architecture-development-plan.md  background-and-distributed-runtime.md  cli.md  configuration.md  core-concepts.md  error-taxonomy.md  http-auth-openapi.md  observability.md  operations-and-tuning.md  persistence-sqlalchemy.md  public-api.md  quickstart.md  reference-application.md  rpc-adapter.md  testing.md
examples/reference_service/: README.md
examples/reference_service/app/: billing.py  main.py  users.py
pyferox/: __init__.py  api.py  authentication.py  django.py  errors.py  filters.py  openapi.py  pagination.py  permissions.py  request.py  response.py  routing.py  rust_bridge.py  schema.py  serializers.py  views.py  viewsets.py
pyferox/auth/: __init__.py  contracts.py  session.py
pyferox/cache/: __init__.py  runtime.py
pyferox/cli/: __init__.py  main.py
pyferox/config/: __init__.py  settings.py
pyferox/core/: __init__.py  app.py  context.py  di.py  dispatcher.py  errors.py  handlers.py  messages.py  middleware.py  module.py  pagination.py  results.py
pyferox/db/: __init__.py  migrations.py  repository.py  sqlalchemy.py
pyferox/django/: __init__.py  api.py
pyferox/events/: __init__.py  runtime.py
pyferox/http/: __init__.py  adapter.py
pyferox/jobs/: __init__.py  runtime.py
pyferox/logging/: __init__.py  hooks.py
pyferox/ops/: __init__.py  runtime.py
pyferox/reliability/: __init__.py  runtime.py
pyferox/rpc/: __init__.py  runtime.py
pyferox/scheduler/: __init__.py  runtime.py
pyferox/schema/: __init__.py  runtime.py
pyferox/testing/: __init__.py  utils.py
pyferox/workflow/: __init__.py  runtime.py
rust-core/: Cargo.toml  README.md  pyproject.toml
rust-core/src/: lib.rs
tests/: conftest.py  test_async_hooks.py  test_django_integration.py  test_drf_style.py  test_serializer_field_options.py  test_smoke.py  test_v02_features.py  test_v03_features.py  test_v04_rust_core.py
tests/auth/: test_session.py
tests/cache/: test_cache_runtime.py
tests/cli/: test_main_entry.py  test_scaffold.py
tests/config/: test_config.py  test_config_extra.py
tests/core/: test_additional_coverage.py  test_app_kernel.py  test_errors.py  test_exports.py  test_pagination.py  test_request.py  test_response.py  test_runtime_coverage_extra.py  test_runtime_features.py  test_schema.py  test_serializers.py
tests/db/: test_db_additional_coverage.py  test_migrations.py  test_sqlalchemy_integration.py
tests/django/: test_django_adapter.py  test_django_api.py
tests/events/: test_events_runtime.py  test_events_runtime_extra.py
tests/http/: test_http_adapter.py  test_http_adapter_coverage_extra.py  test_http_adapter_extra.py
tests/jobs/: test_jobs_runtime.py  test_jobs_runtime_extra.py
tests/logging/: test_hooks.py  test_hooks_extra.py
tests/ops/: test_ops_runtime.py  test_ops_runtime_extra.py
tests/reliability/: test_reliability_runtime.py  test_reliability_runtime_extra.py
tests/rpc/: test_rpc_runtime.py  test_rpc_runtime_extra.py
tests/rust/: test_rust_bridge.py
tests/scheduler/: test_scheduler_runtime.py  test_scheduler_runtime_extra.py
tests/schema/: test_runtime.py  test_runtime_extra.py
tests/testing/: test_utils.py  test_utils_extra.py
tests/workflow/: test_workflow_runtime.py  test_workflow_runtime_extra.py
