[project]
name = "pyferox"
version = "0.0.1"
description = "Minimal DRF-style API framework with Rust-accelerated core"
readme = "README.md"
license = "MIT"
authors = [{name = "PyFerOx Maintainers"}]
requires-python = ">=3.11"
dependencies = ["pyferox-rust>=0.1.0"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: AsyncIO",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

[project.optional-dependencies]
dev = ["build>=1.2.1", "twine>=5.1.1"]

[project.urls]
Homepage = "https://pypi.org/project/pyferox/"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pyferox*"]
