[project]
name = "pyferox"
version = "0.0.1"
description = "Async-first DRF-style API framework for Django with Rust-accelerated validation and serialization."
readme = "README.md"
license = "MIT"
authors = [{name = "PyFerOx Maintainers"}]
requires-python = ">=3.11"
dependencies = ["pyferox-rust>=0.1.0"]
keywords = ["django", "drf", "api", "async", "rust", "serializer", "validation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Framework :: Django",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: AsyncIO",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.1",
  "twine>=5.1.1",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/pablo0723/pyferox"
Repository = "https://github.com/pablo0723/pyferox"
Issues = "https://github.com/pablo0723/pyferox/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pyferox*"]

[tool.pytest.ini_options]
addopts = "-q --cov=pyferox --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["pyferox"]

[tool.coverage.report]
skip_covered = false
show_missing = true
