[project]
name = "pyferox"
version = "0.0.1"
description = "Transport-agnostic, async-first modular service application framework."
readme = "README.md"
license = "MIT"
authors = [{name = "PyFerOx Maintainers"}]
requires-python = ">=3.12"
dependencies = [
  "anyio>=4.4.0",
  "msgspec>=0.20.0",
  "sqlalchemy>=2.0.30",
]
keywords = ["framework", "service", "cqrs", "event-driven", "async", "backend"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Framework :: AsyncIO",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.1",
  "twine>=5.1.1",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "aiosqlite>=0.20.0",
]
http = ["uvicorn>=0.30.0"]

[project.scripts]
pyferox = "pyferox.cli.main:main"

[project.urls]
Homepage = "https://github.com/pablo0723/pyferox"
Repository = "https://github.com/pablo0723/pyferox"
Issues = "https://github.com/pablo0723/pyferox/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pyferox*"]

[tool.pytest.ini_options]
addopts = "-q --cov=pyferox --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["pyferox"]

[tool.coverage.report]
skip_covered = false
show_missing = true
