[package]
name = "pyferox-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "pyferox_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
serde_json = "1.0"
regex = "1.11"
uuid = "1.11"
url = "2.5"
chrono = { version = "0.4", default-features = false, features = ["std"] }
rust_decimal = "1.39"
